...

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Generic Game Related strings-->
    <string name="start_game">Start Game</string>
    <string name="next_round">Next Round</string>

    <!--Reaction Game Strings-->
    <string name="reactionGame_title">Reaction Time</string>
    <string name="reactionGame_tap">TAP</string>
    <string name="reactionGame_information">Tap the blue circle as soon as you see it.\nPress the button to start.</string>
    <string name="reactionGame_tap_to_early">Try not to tap the screen until the blue circle appears</string>
...
